--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2016": "^6.0.10",
     "babel-preset-es2017": "^6.24.1",
-    "eslint": "^4.18.2",
+    "eslint": "^9.33.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1"
@@ -44,42 +44,43 @@
     "browserify": "^14.1.0",
     "cachet-api": "^1.0.8",
     "cookie-session": "^2.0.0-beta.1",
-    "csurf": "^1.9.0",
+    "csurf": "^1.2.2",
     "del": "^2.2.2",
     "dynastic-provider": "github:dynastic/accounts-provider",
     "express": "^4.17.3",
     "express-brute-mongoose": "0.0.8",
     "express-recaptcha": "^2.1.0",
     "fs-extra-promise": "^1.0.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
+    "gulp": "^5.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-changed": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2",
     "helmet": "^3.8.1",
-    "jimp": "^0.5.4",
+    "jimp": "^1.6.0",
     "jwt-simple": "^0.5.1",
-    "marked": "^4.0.10",
+    "marked": "^0.3.19",
     "md5": "^2.2.1",
-    "mongoose": "^4.13.21",
+    "mongoose": "^8.17.1",
     "mongoose-datatables": "github:aydenp/mongoose-datatables",
     "morgan": "^1.8.1",
-    "passport": "^0.3.2",
+    "passport": "^0.7.0",
     "passport-discord": "^0.1.2",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^1.0.0",
-    "passport-jwt": "^2.2.1",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "passport-microsoft": "^0.0.5",
+    "passport-microsoft": "^2.1.0",
     "passport-reddit": "^0.2.4",
-    "passport-twitter": "^1.0.4",
+    "passport-twitter": "^0.1.5",
     "pug": "^3.0.0",
     "pump": "^1.0.2",
     "qrcode": "^0.9.0",
-    "raven": "^2.1.0",
+    "raven": "^0.6.0",
+    "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
     "stream-file-archive": "^1.1.3",
-    "uws": "^9.14.0"
+    "uws": "^200.0.0"
   }
 }
